tests/kiama/negative/type_errors/L4/7_badarray8.ob
MODULE badarray8;

VAR
    array2 : ARRAY 26 OF BOOLEAN;
    
BEGIN
    array2[-2] := TRUE
END badarray8.
